Bizfi Production/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Complete__c</fullName>
        <description>Verifies that Account record is complete</description>
        <formula>OR(Test_Complete__c == TRUE, NOT(AND( RecordType.Name = &quot;Merchant&quot;, OR(ISNULL( Campaign_Source__c ),ISNULL( Name ),ISNULL( McaApp__Legal_Name__c ), ISPICKVAL( McaApp__Type_of_Entity__c,&quot;&quot; ), ISNULL( McaApp__Federal_Tax_ID_No__c ), ISPICKVAL( State_of_Incorporation__c,&quot;&quot; ),ISPICKVAL( Industry,&quot;&quot; ),ISNULL( McaApp__Date_Business_Established__c ),ISNULL( Phone ),ISNULL(  BillingStreet  ),ISNULL(  BillingCity  ),ISNULL(  BillingState  ),ISNULL(  BillingPostalCode   )))))</formula>
        <inlineHelpText>To complete this Acccount, enter information in the following fields: Legal Name, Type of Entity, Fed Tax ID, State of Incorporation, Industry, Date Business Established, Business Phone, and Business Address.</inlineHelpText>
        <label>Account Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Dedupe_Key__c</fullName>
        <formula>SUBSTITUTE(LOWER(McaApp__Federal_Tax_ID_No__c + &quot;_&quot; + LEFT(BillingStreet, 3) + &quot;_&quot; + BillingPostalCode), &quot;-&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Dedup Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phones__c</fullName>
        <description>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone + &quot;;&quot; + Fax + &quot;;&quot;, &quot;+&quot;, &quot;&quot;), &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</description>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone + &quot;;&quot; + Fax + &quot;;&quot;, &quot;+&quot;, &quot;&quot;), &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phones</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Owner__c</fullName>
        <formula>Owner.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Contracts_In__c</fullName>
        <label>All - Contracts In</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_Contracts_Out__c</fullName>
        <label>All - Contracts Out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_Current_Bonus__c</fullName>
        <label>All - Current Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_Current_Booking_Rate__c</fullName>
        <label>All - Current Booking Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_Current_Payout__c</fullName>
        <label>All - Current Payout %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_Current_Total_Funding__c</fullName>
        <label>All - Current Total Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_Next_Tier_Difference__c</fullName>
        <label>All - Next Tier Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_Next_Tier_Min_Bonus__c</fullName>
        <formula>All_Next_Tier_Min_Volume__c *  All_Potential_Payout__c</formula>
        <label>All - Next Tier Min Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_Next_Tier_Min_Volume__c</fullName>
        <label>All - Next Tier Min Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_Next_Tier_Payout__c</fullName>
        <label>All - Next Tier Payout %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_Potential_Bonus__c</fullName>
        <label>All - Potential Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_Potential_Payout__c</fullName>
        <label>All - Potential Payout %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_Potential_Total_Funding__c</fullName>
        <label>All - Potential Total Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BDM__c</fullName>
        <label>BDM</label>
        <picklist>
            <picklistValues>
                <fullName>Bill Lyons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bryan Kain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charles McGeehan II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clarke Farmer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corey Jaeger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don Smith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erik Trumpower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ernie Moyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heidi Matuszek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Howard Taylor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jody Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Sehring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenneth Bolte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenny Davis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matthew McCalla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remi Trytjak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robb Fiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robert Quillen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rusty Roberts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steven Sconiers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Todd Dross</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tommy White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walter McConnell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>William Roen</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Contact_Account_2__c</fullName>
        <description>Provide a second business contact or reference for the merchant.</description>
        <inlineHelpText>Provide a second business contact or reference for the merchant.</inlineHelpText>
        <label>Business Contact/Account # 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Contact_Account_3__c</fullName>
        <description>Provide a third business contact or reference for the merchant.</description>
        <inlineHelpText>Provide a third business contact or reference for the merchant.</inlineHelpText>
        <label>Business Contact/Account # 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Main_Phone__c</fullName>
        <label>Owner Direct Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Phone_2__c</fullName>
        <description>Provide a the phone number of the second business contact or reference for the merchant.</description>
        <inlineHelpText>Provide a the phone number of the second business contact or reference for the merchant.</inlineHelpText>
        <label>Business Phone # 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Phone_3__c</fullName>
        <description>Provide a phone number for the third business contact or reference for the merchant.</description>
        <inlineHelpText>Provide a phone number for the third business contact or reference for the merchant.</inlineHelpText>
        <label>Business Phone # 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CCF_Reconciliation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account marked for CCF EOM Reconciliation</description>
        <inlineHelpText>Account marked for CCF EOM Reconciliation</inlineHelpText>
        <label>CCF Reconciliation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Source__c</fullName>
        <description>The source of the campaign.</description>
        <label>Campaign Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>McaApp__Main_Contact__r.FirstName &amp; &quot; &quot; &amp;  McaApp__Main_Contact__r.LastName</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Month__c</fullName>
        <formula>CASE(MONTH(TODAY()), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <formula>TEXT(YEAR(TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimate_Paid__c</fullName>
        <label>Estimated % Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Flagged_for_Duplicate_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flagged for Duplicate Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funded_Date__c</fullName>
        <label>Funded Date</label>
        <summarizedField>Opportunity.McaApp__Date_Funded__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.McaApp__Funded__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Funded_Opp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this account had a funded opportunity in the past.</inlineHelpText>
        <label>Funded Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>House_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record is a House Account</description>
        <label>House Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Dials__c</fullName>
        <description>Dials from InsideSales LMP</description>
        <inlineHelpText>Dials from InsideSales LMP</inlineHelpText>
        <label>Legacy Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MCACE__UniqueUser__c</fullName>
        <label>User</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MCAExtension1__SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Funded__c</fullName>
        <label>Max Funded $</label>
        <summarizedField>Opportunity.McaApp__Funding_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Funded</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>McaApp__Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Advance_Amount_Option_A__c</fullName>
        <label>Advance - Option A</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Advance_Amount_Option_B__c</fullName>
        <label>Advance - Option</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Advance_Option_C__c</fullName>
        <label>Advance - Option C</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Advance_Option_D__c</fullName>
        <label>Advance - Option D</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Application_Status__c</fullName>
        <label>Application Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Processing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FWD to Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending PreApproval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PreApproved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PreApproved &amp; Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved &amp; Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass/Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold/Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold/Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold/Pending Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outsourced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outsourced/Mendy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PreApproved/Dead Deal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PreApproved/Pulled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PreApproved/Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved/Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved/Dead Deal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract/Dead Deal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract/Pulled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Avg_Gross_Sales_Used__c</fullName>
        <label>Avg. Gross Sales (Used)</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Avg_Monthly_Balance__c</fullName>
        <description>Avg Monthly Balance will be the average of Avg. Daily Balance of all Bank Statement records related to the Account</description>
        <inlineHelpText>Avg Monthly Balance will be the average of Avg. Daily Balance of all Bank Statement records related to the Account</inlineHelpText>
        <label>Avg Monthly Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Avg_Used_New__c</fullName>
        <label>Avg. CC Used</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Bank_Acct_Nums__c</fullName>
        <label>Bank Acct Num(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>McaApp__Bank_Contact__c</fullName>
        <label>Bank Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Bank_Names__c</fullName>
        <inlineHelpText>This field will contain the bank names from the related bank statement object</inlineHelpText>
        <label>Bank Name (s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>McaApp__Bank_Phone__c</fullName>
        <label>Bank Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>McaApp__Business_Contact_Account__c</fullName>
        <label>Business Contact/Account #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Business_Name__c</fullName>
        <label>Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Business_Phone__c</fullName>
        <label>Business Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>McaApp__CC_transactions_Monthly_Avg__c</fullName>
        <description>the average of # Transactions of all Credit Card Sales records related to the Account</description>
        <inlineHelpText>the average of # Transactions of all Credit Card Sales records related to the Account</inlineHelpText>
        <label>Monthly # Transactions Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Cash_Advance_Company__c</fullName>
        <label>Cash Advance Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Cellular_No__c</fullName>
        <label>Cellular #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>McaApp__Commission_Percentage__c</fullName>
        <label>Commission %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>McaApp__ConvertedAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ConvertedAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Count_Of_Opportunities__c</fullName>
        <label>Count Of Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>McaApp__Credit_Card_Sales__c</fullName>
        <label>Credit Card Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__DBA__c</fullName>
        <label>DBA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Date_Business_Established__c</fullName>
        <label>Date Business Established</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>McaApp__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>McaApp__Ever_used_a_Business_Cash_Advance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ever used a Business Cash Advance?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Federal_Tax_ID_No__c</fullName>
        <label>Federal Tax ID#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Gross_monthly_Sales__c</fullName>
        <label>Gross monthly Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__In_House_Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>In House Account Executive</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>McaApp__Landlord_Contact_Name__c</fullName>
        <label>Landlord Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Landlord_Mortgagee__c</fullName>
        <label>Landlord/Mortgagee</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Landlord_Phone__c</fullName>
        <label>Landlord Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>McaApp__Lease_start_date__c</fullName>
        <label>Lease start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>McaApp__Legal_Address_City__c</fullName>
        <label>Legal Address City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Legal_Address_State__c</fullName>
        <label>Legal Address State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Legal_Address_Zip__c</fullName>
        <label>Legal Address Zip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Legal_Address__c</fullName>
        <label>Legal Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Length_of_Ownership__c</fullName>
        <label>Length of Ownership</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__MIDs__c</fullName>
        <label>MID(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>McaApp__Main_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Main Contact)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>McaApp__Monthly_Bank_Deposit_Avg_All__c</fullName>
        <description>the average of $ Deposits of all Bank Statement records related to the Account</description>
        <inlineHelpText>the average of $ Deposits of all Bank Statement records related to the Account</inlineHelpText>
        <label>Monthly $ Deposits Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Monthly_Batches_Avg__c</fullName>
        <label>Monthly # Batches Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Monthly_CC_Avg_All__c</fullName>
        <description>the average of $ Processed of all Credit Card Sales records related to the Account</description>
        <inlineHelpText>the average of $ Processed of all Credit Card Sales records related to the Account</inlineHelpText>
        <label>Monthly $ Processed Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Monthly_Deposits_Avg__c</fullName>
        <description>the average of # Deposits of all Bank Statement records related to the Account</description>
        <inlineHelpText>the average of # Deposits of all Bank Statement records related to the Account</inlineHelpText>
        <label>Monthly # Deposits Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Monthly_Payment__c</fullName>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__NDBs_Avg__c</fullName>
        <description>The average of # NDBs of all Bank Statement records related to the Account</description>
        <inlineHelpText>The average of # NDBs of all Bank Statement records related to the Account</inlineHelpText>
        <label># NDBs Avg</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__NSFs_Avg__c</fullName>
        <description>The average of # NSFs of all Bank Statement records related to the Account</description>
        <inlineHelpText>The average of # NSFs of all Bank Statement records related to the Account</inlineHelpText>
        <label># NSFs Avg</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Number_Bank_Statements_Available__c</fullName>
        <label># of Bank Stmts Avail</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Number_CC_Statements_Available__c</fullName>
        <label># of CC Stmts Avail</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__NumberofLocations__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Owner_1_City__c</fullName>
        <label>Owner #1 City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Owner_1_DOB__c</fullName>
        <label>Owner #1 DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>McaApp__Owner_1_Driver_License__c</fullName>
        <label>Owner 1 Drivers License #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Owner_1_Home_Address__c</fullName>
        <label>Owner #1 Home Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Owner_1_Home_Phone__c</fullName>
        <label>Owner #1 Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>McaApp__Owner_1_Name__c</fullName>
        <label>Owner #1 Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Owner_1_State__c</fullName>
        <label>Owner #1 State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Owner_1_Title__c</fullName>
        <label>Owner #1 Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Owner_1_Zip__c</fullName>
        <label>Owner #1 Zip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Owner_2_City__c</fullName>
        <label>Owner #2 City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Owner_2_DOB__c</fullName>
        <label>Owner #2 DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>McaApp__Owner_2_Drivers_License__c</fullName>
        <label>Owner 2 Drivers License #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Owner_2_Home_Address__c</fullName>
        <label>Owner #2 - Home Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Owner_2_Home_Phone__c</fullName>
        <label>Owner #2 Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>McaApp__Owner_2_State__c</fullName>
        <label>Owner #2 State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Owner_2_Title__c</fullName>
        <label>Owner #2 Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Owner_2_Zip__c</fullName>
        <label>Owner #2 Zip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Owner_2_name__c</fullName>
        <label>Owner #2 Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Ownership1_Percentage__c</fullName>
        <label>Ownership% #1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>McaApp__Ownership2_Percentage__c</fullName>
        <label>Ownership% #2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>McaApp__Payback_Funded__c</fullName>
        <label>Payback/Funded</label>
        <picklist>
            <picklistValues>
                <fullName>Payback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission Revenue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Processor_Names__c</fullName>
        <label>Processor Name (s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>McaApp__Requested_Amount_of_Funds__c</fullName>
        <label>Requested Amount of Funds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>